# AgentX-Phase2

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  GNUCOBOL_SETUP.md  LICENSE  README.md  README.md.bak  Sprint2_deploy.ps1  amber.json  demo.ps1  deploy.ps1  deploy.sh  docker-compose.yml  test_purple_agent.ps1
.github/workflows/: agentx-deploy.yml  docker-build-push.yml  socket-security.yml
agent_gateway/: Cargo.toml  Dockerfile
agent_gateway/src/: main.rs
ai_mcp/: Cargo.toml  Dockerfile
ai_mcp/src/: main.rs
cobol_mcp/: Cargo.toml  Dockerfile
cobol_mcp/src/: main.rs
data/: loan_data.json
green_agent/: Cargo.toml  Dockerfile
green_agent/src/: main.rs
helm/mainframe-modernization/: values.yaml
k8s/base/: 00-namespace-rbac.yaml  01-secrets-config.yaml  02-agent-gateway.yaml  03-agents.yaml  04-network-policy.yaml  05-mcp-servers.yaml  06-istio-authpolicy.yaml  07-istio-network-policy.yaml
legacy_source/: interest_calc.cbl
purple_agent/: Cargo.toml  Dockerfile  models.toml  models_clean.toml
purple_agent/src/: bayesian.rs  claude.rs  consensus.rs  deepseek_v3.rs  fba.rs  llama.rs  main.rs  nebius_client.rs
rust_mcp/: Cargo.toml  Dockerfile
rust_mcp/src/: main.rs
s3_mcp/: Cargo.toml  Dockerfile
s3_mcp/src/: main.rs
scripts/: print_fba_nodes.py
