[package]
name = "ai-mcp"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ai_mcp"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
